tdf#145721 sw track changes: sign text moving in redline tooltips

Write "Moved (deletion)" and "Moved (insertion)" instead of
"Deleted" and "Inserted" in tooltip of tracked text movings.

Follow-up to commit f51fa7534421a195a58b4a737a2e836d8c25ba81
"tdf#145718 sw, DOCX import: complete tracked text moving"

Change-Id: I5db3025ddb7b4758e3699c10971a765784555a20
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125405
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>